Turn into a quick js script and add CLI options

--- a/package.json
+++ b/package.json
@@ -2,14 +2,10 @@
   "name": "weekly-meal-plan",
   "version": "1.0.0",
   "description": "Pull Google Sheets and generate a weekly meal plan",
-  "main": "index.ts",
+  "main": "index.js",
   "type": "module",
-  "bin": {
-    "weekly-meal-plan": "./build/index.js"
-  },
   "scripts": {
-		"start": "node ./build/index.js",
-    "build": "swc ./src/unique-random-number.ts ./src/index.ts -o ./build/index.js ",
+    "start": "node ./index.js --help",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "tschant",
@@ -17,11 +13,7 @@
   "dependencies": {
     "chalk": "^5.0.1",
     "dotenv": "^16.0.1",
-    "google-spreadsheet": "^3.3.0"
-  },
-  "devDependencies": {
-    "@swc/cli": "^0.1.57",
-    "@swc/core": "^1.2.220",
-    "@types/google-spreadsheet": "^3.3.0"
+    "google-spreadsheet": "^3.3.0",
+    "meow": "^10.1.3"
   }
 }
